--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bson": "^4.6.4",
     "firebase": "^9.8.1",
     "jwt-decode": "^3.1.2",
+    "mongoose": "^6.3.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
