--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.3",
+    "ip": "^1.1.8",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "kafkajs": "^2.0.1",
     "method-override": "^3.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
