--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.2",
     "bson": "^4.6.4",
+    "crypto": "^1.0.1",
+    "emoji-picker-react": "^3.5.1",
     "firebase": "^9.8.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.4",
@@ -19,11 +21,14 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-flip-move": "^3.0.4",
+    "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-twitter-embed": "^4.0.4",
     "socket.io-client": "^4.5.1",
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
